engr441/while-infer/tests/valid/Inferred_Valid_7.while
int|bool f(int y) {
    var x;
    if (y > 0) {
        x = { a: true };
    } else {
        x = { a: 10 };
    }
    return x.a;
}

void main() {
    assert ( f(10) == true);
    assert ( f(-10) == 10);
}