engr441/while-infer/tests/invalid-deadcode/UnreachableCode_Invalid_4.while
bool sign(int x) {
    if(x >= 0) {
	return true;
	x = 1;
    } 
    return true;
}
